# delilah-eval

./: .gitignore  CMakeLists.txt  Makefile  README.md  delilah-eval  delilah.c  delilah.h  delilah_uapi.h  helpers.h  hermes.c
experiments/: bench.c  cmb.c  dma_1.c  dma_4.c  experiments.h  read_file.c  read_file_cache.c  read_file_direct.c  read_file_direct_noncpy.c  read_raw.c  read_raw_direct.c  read_raw_direct_noncpy.c  tud_filter_bw_int.c  tud_filter_bw_jit.c  tud_filter_bw_jit_noio.c  tud_filter_eq_int.c  tud_filter_eq_jit.c  version.c
files/: 100.txt  1000.txt  10000.txt  100000.txt
programs/: CMakeLists.txt  Makefile  bench.c  file.c  file2.c  file3.c  file_map.c  filter.c  filter_noio.c  mount.c  unmount.c  version.c
